--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@
 - Extend TESTAR webdriver tags
 - Fix bug extracting the protocol name the .sse file
 - Ignore weak password chrome popup
+- Refactor usage of Tag ScreenshotImage
 
 
 #TESTAR 2.7.7 (26-Aug-2025)
