--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+#TESTAR v2.7.11 (7-Oct-2025)
+- Bump org.seleniumhq.selenium:selenium-java from 4.35.0 to 4.36.0
+- Update devtools dependences to v140
+
+
 #TESTAR v2.7.10 (26-Sep-2025)
 - Use scroll-snap-type to ignore scroll actions in carousels
 - Remove unused creation of existingCssClasses file
