Update TESTAR version and changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+#TESTAR v2.7.12 (20-Oct-2025)
+- Add reasoning effort to OpenAI API
+- Update corresponding llm protocols
+
+
 #TESTAR v2.7.11 (7-Oct-2025)
 - Bump org.seleniumhq.selenium:selenium-java from 4.35.0 to 4.36.0
 - Update devtools dependences to v140
