--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+#TESTAR v2.7.14 (27-Oct-2025)
+- Bump org.seleniumhq.selenium:selenium-java from 4.37.0 to 4.38.0
+- Update devtools dependencies to v142
+
+
 #TESTAR v2.7.13 (24-Oct-2025)
 - Add reasoning effort to OpenAI API
 - Update corresponding llm protocols
