--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+#TESTAR v2.7.15 (3-Nov-2025)
+- Fix WdRootElement parent
+- Improve WdElement isDisplayed logic
+- Refactor image prompt generator
+- Update TextVisualizer catching
+- Update Android input text for LLM prompts
+
+
 #TESTAR v2.7.14 (27-Oct-2025)
 - Bump org.seleniumhq.selenium:selenium-java from 4.37.0 to 4.38.0
 - Update devtools dependencies to v142
