--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
 - Remove unused NativeLinker methods
 - Update verdict info escape in html report
 - Add deriveActionsFunction to android spy mode
+- Make android spy info panel scrollable
 
 
 #TESTAR v2.7.15 (3-Nov-2025)
