--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+#TESTAR v2.7.18 (9-Dec-2025)
+- Bump org.seleniumhq.selenium:selenium-java from 4.38.0 to 4.39.0
+- Bump io.github.bonigarcia:webdrivermanager from 6.3.2 to 6.3.3
+- Update OrientDB default test credentials
+
+
 #TESTAR v2.7.17 (5-Dec-2025)
 - Add allowInvisibleElements to appium-android
 - Add AndroidDisplayed Tag property
